# sem3_lab2

./: AlphabeticalCat.h  AlphabeticalIndex.h  ArraySequence.h  CMakeLists.txt  DynamicArray.h  Game'sInterface.h  IDictionary.h  ISet.h  ISortedSequence.h  InterfaceFunctions.h  LinkedList.h  ListSequence.h  MergeSort.h  Sequence.h  ShellSort.h  Tests.h  main.cpp  tic_tac_toe.h
