cmake_minimum_required(VERSION 3.15)
project(a_lot_of_problems)

set(CMAKE_CXX_STANDARD 20)

add_executable(a_lot_of_problems main.cpp LinkedList.h ListSequence.h Sequence.h DynamicArray.h ArraySequence.h tic_tac_toe.h IDictionary.h InterfaceFunctions.h Game'sInterface.h ISet.h ISortedSequence.h MergeSort.h AlphabeticalIndex.h ShellSort.h)